# hgw

./: .gitignore  .gitmodules  Makefile  README.md  go.mod  go.sum
.github/workflows/: prebuild-linux.yml
homegw-init/: bootstrap.go  config.go  emergency_kexec.go  http.go  main.go  netif.go  ocram.go  ssh.go  sshrelay.go  wireguard.go
homegw-libs/concurrency/: value_task.go
homegw-libs/disk/: lib.go
homegw-libs/kafka-sink/: lib.go  scram_client.go
homegw-libs/kexec/: lib.go
homegw-libs/keyring/: .gitignore  lib.go
homegw-libs/memfd/: lib.go
homegw-libs/netboot/: lib.go
homegw-libs/rt-control/: lib.go
homegw-libs/tesla-api/: backoff.go  lib.go
homegw-rt/: Cargo.toml  build.rs
homegw-rt/headers/: uapi_gpio.h
homegw-rt/src/: config.rs  deadline.rs  gpiod.rs  gpiod_sys.rs  main.rs
homegw-rt/src/rt_task/: gpio_server.rs  mod.rs  oom.rs
kexec-sealer/: main.go
rootfs/: Dockerfile  init  init2  trigger_oom.sh
scripts/: alientek-imximage.cfg  build_alientek.sh  build_rootfs.sh  gen_config_ocram_image.sh  gen_config_text.sh
